openmetadata-ui/src/main/resources/ui/src/components/ExploreV1/exploreV1.less
/*
 *  Copyright 2022 Collate.
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *  http://www.apache.org/licenses/LICENSE-2.0
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */

@import (reference) '../../styles/variables.less';

@quick-filters-container-height: 86px;

.search-export-modal {
  .ant-modal-content {
    .ant-modal-body {
      overflow-y: hidden;
    }
  }
}

.explore-page {
  .content-height-with-resizable-panel {
    height: calc(
      100vh - @om-navbar-height - @quick-filters-container-height - @size-xs
    );
    overflow-y: auto;

    &.filter-applied {
      height: calc(
        100vh - @om-navbar-height - @quick-filters-container-height - @size-xs -
          40px // filter applied height adjustment
      );
    }
  }

  .explore-page-right-panel {
    flex: 0 0 clamp(360px, 26vw, 440px);
    max-width: 440px;
    min-width: 360px;
    overflow: auto;
  }

  .explore-icon {
    width: 16px;
    height: 16px;
  }

  .explore-tab-label {
    display: flex;
    align-items: center;
    flex: 1;
    min-width: 0;
  }

  .explore-main-card {
    .ant-card {
      border-bottom: 0;
      border-bottom-right-radius: 0;
      border-bottom-left-radius: 0;
    }

    .ant-card-body {
      height: 100%;
      overflow-y: auto;
    }
  }

  .explore-tree {
    overflow: auto;

    .ant-tree-switcher-icon {
      width: 12px;
      height: 12px;
      color: @grey-4;
    }

    .ant-tree-switcher_open:hover,
    .ant-tree-switcher_close:hover {
      background-color: @grey-2;
    }

    .ant-tree-title {
      width: 100%;
      padding: 4px;
    }

    .ant-tree-node-selected {
      background-color: @radio-button-checked-bg !important;
    }

    .ant-tree-treenode {
      padding: 0;
    }
  }
}

